Fix design problem about text overflow logo in table (column account name) - account page

--- a/assets/css/custom.less
+++ b/assets/css/custom.less
@@ -42,7 +42,7 @@ html, body {
 table.dataTable {
   margin-top: 10px !important;
   margin-bottom: 20px !important;
-  float: left;
+//  float: left;
 }
 
 .filterDesc {
